--- a/access-control/src/main/resources/application.properties
+++ b/access-control/src/main/resources/application.properties
@@ -5,11 +5,11 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # Obrigatório de acordo com o seu banco de dados
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=12345
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.datasource.driverClassName=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+# spring.datasource.username=postgres
+# spring.datasource.password=12345
 
 # spring.security.user.name=user
 # spring.security.user.password=user123
